FIX contrast

--- a/vcls-theme/static/src/scss/vcls-variables.scss
+++ b/vcls-theme/static/src/scss/vcls-variables.scss
@@ -2,4 +2,4 @@
 $o-enterprise-color: rgb(8, 32, 110); // VCLS blue logo
 
 // Increase table contrast ingrid view
-$light:         $gray-300 !default;
+$o-gray-100: #dee2e6; // This is BS default
